objects/Information__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Information</relationshipLabel>
        <relationshipName>Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Information</label>
    <nameField>
        <displayFormat>IN{00000}</displayFormat>
        <label>Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>